# bloatshot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  contributors.md  dump_keys.rs  target.txt  target_math.txt
scratch/: check_ocr_struct.rs
src/: args.rs  gui.rs  lib.rs  main.rs  ocr.rs  screenshot.rs  semantic.rs  util.rs
