[package]
name = "bloatshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.1"
fs2 = "0.4.3"
image = { version = "0.25.10", features = ["png", "jpeg"] }
tempfile = "3.27.0"
rayon = "1.10.0"
ocr-rs = "2.2.2"
ort = "2.0.0-rc.12"
ndarray = "0.16"
serde_json = "1.0.149"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package.ocr-rs]
opt-level = 2

[profile.dev.package.ort]
opt-level = 2

[profile.dev.package.ndarray]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
